Fixed Logo and formatted code to a more readable state

--- a/General.css
+++ b/General.css
@@ -66,7 +66,8 @@ nav a
     background-image: azure;
 }
 /*---Body---*/
-.main{
+.content
+{
     
 }
 
